fixed bug where theere was extra padding on images while loading

--- a/src/App.css
+++ b/src/App.css
@@ -97,3 +97,7 @@
 .vs {
   color: #C89B3C;
 }
+
+.safari-text {
+  color: red;
+}
