--- a/src/components/champions-container/champions-container.css
+++ b/src/components/champions-container/champions-container.css
@@ -2,6 +2,7 @@
     /* aspect-ratio: 3.18867924528/ 1; */
     display: flex;
     max-width: 100%;
+    width: 100%;
     /* width: 100%; */
     /* background-color: blue; */
     /* max-height: 20%; */
